--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,17 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="200dp"
+    android:layout_marginTop="140dp"
     android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="422dp"
+        android:layout_height="99dp"
+        android:layout_weight="1"
+        app:srcCompat="@drawable/delivery" />
 
     <TextView
         android:id="@+id/dt"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="47dp"
         android:layout_weight="1"
         android:gravity="center_horizontal"
-        android:text="DeliveryTogether!"
+        android:text="배달투게더"
         android:textSize="20sp" />
 
     <LinearLayout
@@ -24,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="ID: " />
+            android:text="     아이디: " />
 
         <EditText
             android:id="@+id/loginId"
@@ -46,7 +54,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="PASSWORD:" />
+            android:text="    비밀번호:" />
 
         <EditText
             android:id="@+id/loginPw"
@@ -60,17 +68,17 @@
 
     <Button
         android:id="@+id/loginBtn"
-        android:onClick="onClickLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login" />
+        android:onClick="onClickLogin"
+        android:text="로그인" />
 
     <Button
         android:id="@+id/joinBtn"
-        android:onClick="onClickJoin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="join" />
+        android:onClick="onClickJoin"
+        android:text="회원가입" />
 
 </LinearLayout>
