--- a/app/src/main/res/layout/list_store.xml
+++ b/app/src/main/res/layout/list_store.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/common_google_signin_btn_text_dark_focused"
+    android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
     android:clickable="true"
+    android:orientation="vertical"
     android:padding="12dp"
     android:visibility="visible"
     tools:actionBarNavMode="list">
@@ -14,8 +15,8 @@
         android:id="@+id/list_storeName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
-        android:layout_marginLeft="72dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginLeft="68dp"
         android:text="TextView"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,26 +27,32 @@
         android:id="@+id/list_storeAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginLeft="28dp"
+        android:layout_marginEnd="76dp"
+        android:layout_marginRight="76dp"
         android:text="TextView"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/list_storeName"
+        app:layout_constraintEnd_toStartOf="@+id/imageView2"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/storeBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:text="가게선택"
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="49dp"
+        android:layout_height="36dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.952"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        tools:layout_marginLeft="60dp" />
+        app:layout_constraintVertical_bias="0.666"
+        app:srcCompat="@drawable/store" />
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="43dp"
+        android:layout_height="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/click" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
