--- a/app/src/main/res/layout/activity_alone_purchase.xml
+++ b/app/src/main/res/layout/activity_alone_purchase.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/purMainText"
+        android:id="@+id/togetherMainText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -24,7 +24,7 @@
             android:text="배달 받을 주소:" />
 
         <EditText
-            android:id="@+id/myPlace"
+            android:id="@+id/togetherPlace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -33,7 +33,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/orderList"
+        android:id="@+id/togetherOrderList"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -48,28 +48,28 @@
         android:textSize="23sp" />
 
     <TextView
-        android:id="@+id/curMoney"
+        android:id="@+id/curMoney_t"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="현재 잔액:" />
 
     <TextView
-        android:id="@+id/allMoney"
+        android:id="@+id/allMoney_t"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="총 결제 금액:" />
 
     <TextView
-        android:id="@+id/afterMoney"
+        android:id="@+id/afterMoney_t"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="결제 후 잔액:" />
 
     <Button
-        android:id="@+id/orderBtn"
+        android:id="@+id/togetheOrderBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="주문하기" />
