--- a/app/src/main/res/layout/list_together_list.xml
+++ b/app/src/main/res/layout/list_together_list.xml
@@ -84,7 +84,7 @@
         app:layout_constraintVertical_bias="0.195" />
 
     <TextView
-        android:id="@+id/textView20"
+        android:id="@+id/curPeople"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1"
